# latin-author-learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
example_notebooks/: Create_test_corpus.ipynb  Experiments_tokenizers.ipynb  Load_corpus.ipynb  Load_corpus_and_tokenizers.ipynb  Use_embeddings.ipynb  Use_embeddings_with_chunk_sizes.ipynb  Use_fasttext_for_author_recognition.ipynb
latin_author_learning/: corpus.py  datasets.py  fasttext_wrapper.py  tokenize.py
tests/: test_corpus.py  test_datasets.py  test_fasttext_wrapper.py  test_tokenize.py
tests/data/small_sample_corpus/test_Cicero_Tacitus/Cicero/: cic.amic_falc_lat.xml.json.json  cic.oct1_lat.xml.json.json  cic.oct6_lat.xml.json.json  cic.parad_lat.xml.json.json  cic.part_lat.xml.json.json  cic.sen_falc_lat.xml.json.json  cic.tusc_lat.xml.json.json  deoratore_lat.xml.json.json
tests/data/small_sample_corpus/test_Cicero_Tacitus/Tacitus/: tac.ag_lat.json.json  tac.ag_lat.xml.json.json  tac.ann_lat.xml.json.json  tac.dial_lat.json.json  tac.dial_lat.xml.json.json  tac.ger_lat.json.json  tac.ger_lat.xml.json.json  tac.hist_lat.xml.json.json
tests/test_data/: test.subword.encoder
