[tool.poetry]
name = "latin-author-learning"
version = "0.1.0"
description = ""
authors = ["Stefan Maier <stm@localhost>"]
readme = "README.md"
packages = [{include = "latin_author_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
