[tool.poetry]
name = "latin-author-learning"
version = "0.1.0"
description = ""
authors = ["Stefan Maier <stm@localhost>"]
readme = "README.md"
packages = [{include = "latin_author_learning"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
torch = "^2.0.1"
jupyter = "^1.0.0"
cltk = "^1.1.6"
wget = "^3.2"
pytorch-nlp = "^0.5.0"
transformers = "^4.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
lorem = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.numpydoc_validation]
ignore = [
    "EX01",
    "SA01",
    "ES01",
    "GL08",
]
